--- a/src/assets/scss/mdb.scss
+++ b/src/assets/scss/mdb.scss
@@ -12,7 +12,7 @@
 @import "core/colors";
 @import "core/variables";
 @import "core/global";
-@import "core/helpers";
+// @import "core/helpers";
 @import "core/typography";
 @import "core/masks";
 @import "core/waves";
@@ -23,28 +23,28 @@
 @import "free/buttons";
 @import "free/cards";
 @import "free/dropdowns";
-@import "free/input-group";
+// @import "free/input-group";
 @import "free/navbars";
-@import "free/pagination";
+// @import "free/pagination";
 @import "free/badges";
-@import "free/modals";
-@import "free/carousels";
+// @import "free/modals";
+// @import "free/carousels";
 @import "free/forms";
-@import "free/msc";
+// @import "free/msc";
 @import "free/footers";
-@import "free/list-group";
-@import "free/tables";
-@import "free/depreciated";
+// @import "free/list-group";
+// @import "free/tables";
+// @import "free/depreciated";
 @import "free/steppers";
-@import "free/loader";
-@import "free/treeview";
+// @import "free/loader";
+// @import "free/treeview";
 // Free addons
-@import "addons/datatables";
-@import "addons/datatables-select";
-@import "addons/directives";
-@import "addons/hierarchical-display";
-@import "addons/flag";
-@import "addons/rating";
+// @import "addons/datatables";
+// @import "addons/datatables-select";
+// @import "addons/directives";
+// @import "addons/hierarchical-display";
+// @import "addons/flag";
+// @import "addons/rating";
 
 // Your custom styles
 @import "custom-styles";
